force-app/main/default/objects/UHN_AAR__c/UHN_AAR__c.object-meta.xml
<CustomObject>
    <label>UHN_AAR</label>
    <nameField>
        <displayFormat>AAR-{0000}</displayFormat>
        <label>UHN_AAR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UHN_AARs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>