force-app/main/default/objects/UHN_AAR__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Research Institute</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Institute_AARs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>