force-app/main/default/objects/UHN_AAR__c/fields/Attestation_Date__c.field-meta.xml
<CustomField>
    <fullName>Attestation_Date__c</fullName>
    <label>Attestation Date</label>
    <type>DateTime</type>
</CustomField>