force-app/main/default/objects/UHN_AAR__c/fields/Attested_By__c.field-meta.xml
<CustomField>
    <fullName>Attested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Attested_User_AARs</relationshipName>
    <type>Lookup</type>
</CustomField>