force-app/main/default/objects/UHN_AAR__c/fields/Circumstances_Productivity__c.field-meta.xml
<CustomField>
    <fullName>Circumstances_Productivity__c</fullName>
    <label>Circumstances Affecting Productivity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>