force-app/main/default/objects/UHN_AAR__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Researcher</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Researcher_AARs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>