force-app/main/default/objects/UHN_AAR__c/fields/Form_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Form_Feedback__c</fullName>
    <label>Feedback on Form</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>