force-app/main/default/objects/UHN_AAR__c/fields/Graduate_Student_Count__c.field-meta.xml
<CustomField>
    <fullName>Graduate_Student_Count__c</fullName>
    <label>Graduate Student Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>