force-app/main/default/objects/UHN_AAR__c/fields/Grant_Active_Count__c.field-meta.xml
<CustomField>
    <fullName>Grant_Active_Count__c</fullName>
    <description>Total number of active grants held by the PI in the review year. Populated by external grants sync.</description>
    <label>Active Grant Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>