force-app/main/default/objects/UHN_AAR__c/fields/Grant_Annual_Value_CAD__c.field-meta.xml
<CustomField>
    <fullName>Grant_Annual_Value_CAD__c</fullName>
    <description>Annualized grant funding attributable to the review year in Canadian dollars. Populated by external grants sync.</description>
    <label>Annual Grant Value (CAD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>