force-app/main/default/objects/UHN_AAR__c/fields/Grant_Co_I_Count__c.field-meta.xml
<CustomField>
    <fullName>Grant_Co_I_Count__c</fullName>
    <description>Number of grants where the PI is a Co-Investigator. Populated by external grants sync.</description>
    <label>Grants as Co-Investigator</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>