force-app/main/default/objects/UHN_AAR__c/fields/Grant_Override_Payload__c.field-meta.xml
<CustomField>
    <fullName>Grant_Override_Payload__c</fullName>
    <description>PI corrections to grant data as a JSON delta. Keys present here take precedence over Grant_Source_Payload__c during reconciliation.</description>
    <label>Grant Override Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>