force-app/main/default/objects/UHN_AAR__c/fields/Grant_Source_Hash__c.field-meta.xml
<CustomField>
    <fullName>Grant_Source_Hash__c</fullName>
    <description>SHA-256 hash of the last Grant_Source_Payload__c. Used by the sync handler to detect source changes and skip no-op writes.</description>
    <label>Grant Source Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>