force-app/main/default/objects/UHN_AAR__c/fields/Grant_Source_Payload__c.field-meta.xml
<CustomField>
    <fullName>Grant_Source_Payload__c</fullName>
    <description>JSON snapshot of the last grants projection received from the source system. Merged with Grant_Override_Payload__c at display time.</description>
    <label>Grant Source Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>