force-app/main/default/objects/UHN_AAR__c/fields/Grant_Total_Value_CAD__c.field-meta.xml
<CustomField>
    <fullName>Grant_Total_Value_CAD__c</fullName>
    <description>Total face value of all active grants in Canadian dollars. Populated by external grants sync.</description>
    <label>Total Grant Value (CAD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>