force-app/main/default/objects/UHN_AAR__c/fields/Grant_Verified_At__c.field-meta.xml
<CustomField>
    <fullName>Grant_Verified_At__c</fullName>
    <description>Timestamp of the most recent grants section verification. Audit stamp — do not update manually.</description>
    <label>Grant Verified At</label>
    <type>DateTime</type>
</CustomField>