force-app/main/default/objects/UHN_AAR__c/fields/Grant_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Grant_Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who most recently verified the grants section. Audit stamp — do not update manually.</description>
    <label>Grant Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Verified Grants (AAR)</relationshipLabel>
    <relationshipName>Verified_Grants_AAR</relationshipName>
    <type>Lookup</type>
</CustomField>