force-app/main/default/objects/UHN_AAR__c/fields/Invited_Talk_Count__c.field-meta.xml
<CustomField>
    <fullName>Invited_Talk_Count__c</fullName>
    <label>Invited Talk Count</label>
    <summaryFilterItems>
        <field>AAR_Scholarly_Output__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Invited Talk</value>
    </summaryFilterItems>
    <summaryForeignKey>AAR_Scholarly_Output__c.AAR_Record__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>