force-app/main/default/objects/UHN_AAR__c/fields/Invited_Talks__c.field-meta.xml
<CustomField>
    <fullName>Invited_Talks__c</fullName>
    <label>Invited Talks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>