force-app/main/default/objects/UHN_AAR__c/fields/Is_Grants_Verified__c.field-meta.xml
<CustomField>
    <fullName>Is_Grants_Verified__c</fullName>
    <description>Checkbox mirror of Grant_Verification_Status__c = Verified. Used for list view filtering and formula references.</description>
    <formula>ISPICKVAL(Grant_Verification_Status__c, &quot;Verified&quot;)</formula>
    <label>Grants Verified</label>
    <type>Checkbox</type>
</CustomField>