force-app/main/default/objects/UHN_AAR__c/fields/Is_Publications_Verified__c.field-meta.xml
<CustomField>
    <fullName>Is_Publications_Verified__c</fullName>
    <description>Checkbox mirror of Pub_Verification_Status__c = Verified. Used for list view filtering and formula references.</description>
    <formula>ISPICKVAL(Pub_Verification_Status__c, &quot;Verified&quot;)</formula>
    <label>Publication Metrics Verified</label>
    <type>Checkbox</type>
</CustomField>