force-app/main/default/objects/UHN_AAR__c/fields/Krembil_Sub_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Krembil_Sub_Grouping__c</fullName>
    <label>Krembil Sub-Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>