force-app/main/default/objects/UHN_AAR__c/fields/Lay_Summary__c.field-meta.xml
<CustomField>
    <fullName>Lay_Summary__c</fullName>
    <label>Lay Summary of Research</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>