force-app/main/default/objects/UHN_AAR__c/fields/Mandatory_Training_Complete__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Training_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory Training Complete</label>
    <type>Checkbox</type>
</CustomField>