force-app/main/default/objects/UHN_AAR__c/fields/Media_Impact__c.field-meta.xml
<CustomField>
    <fullName>Media_Impact__c</fullName>
    <label>Media Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>