force-app/main/default/objects/UHN_AAR__c/fields/Other_Trainee_Count__c.field-meta.xml
<CustomField>
    <fullName>Other_Trainee_Count__c</fullName>
    <label>Other Trainee Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>