force-app/main/default/objects/UHN_AAR__c/fields/Patient_Engagement_Survey__c.field-meta.xml
<CustomField>
    <fullName>Patient_Engagement_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Engagement Survey Complete</label>
    <type>Checkbox</type>
</CustomField>