force-app/main/default/objects/UHN_AAR__c/fields/Postdoc_Count__c.field-meta.xml
<CustomField>
    <fullName>Postdoc_Count__c</fullName>
    <label>Postdoc Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>