force-app/main/default/objects/UHN_AAR__c/fields/Prepopulated_From_Grants__c.field-meta.xml
<CustomField>
    <fullName>Prepopulated_From_Grants__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Populated From Grants</label>
    <type>Checkbox</type>
</CustomField>