force-app/main/default/objects/UHN_AAR__c/fields/Presentations__c.field-meta.xml
<CustomField>
    <fullName>Presentations__c</fullName>
    <label>Presentations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>