force-app/main/default/objects/UHN_AAR__c/fields/Pub_Citation_Count__c.field-meta.xml
<CustomField>
    <fullName>Pub_Citation_Count__c</fullName>
    <description>Total citation count across all publications as reported by the bibliometric source system.</description>
    <label>Total Citation Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>