force-app/main/default/objects/UHN_AAR__c/fields/Pub_First_Last_Author_Count__c.field-meta.xml
<CustomField>
    <fullName>Pub_First_Last_Author_Count__c</fullName>
    <description>Count of publications where the PI is listed as first or last author. Populated by external bibliometric sync.</description>
    <label>First/Last Author Publication Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>