force-app/main/default/objects/UHN_AAR__c/fields/Pub_H_Index__c.field-meta.xml
<CustomField>
    <fullName>Pub_H_Index__c</fullName>
    <description>h-index as reported by the bibliometric source system at the time of the last sync.</description>
    <label>h-Index</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>