force-app/main/default/objects/UHN_AAR__c/fields/Pub_Override_Payload__c.field-meta.xml
<CustomField>
    <fullName>Pub_Override_Payload__c</fullName>
    <description>PI corrections to publication metrics as a JSON delta. Keys present here take precedence over Pub_Source_Payload__c during reconciliation.</description>
    <label>Publication Metrics Override Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>