force-app/main/default/objects/UHN_AAR__c/fields/Pub_Peer_Reviewed_Count__c.field-meta.xml
<CustomField>
    <fullName>Pub_Peer_Reviewed_Count__c</fullName>
    <description>Count of peer-reviewed publications from the bibliometric source system.</description>
    <label>Peer-Reviewed Publication Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>