force-app/main/default/objects/UHN_AAR__c/fields/Pub_Source_Payload__c.field-meta.xml
<CustomField>
    <fullName>Pub_Source_Payload__c</fullName>
    <description>JSON snapshot of the last publications metrics projection received from the bibliometric source system. Merged with Pub_Override_Payload__c at display time.</description>
    <label>Publication Metrics Source Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>