force-app/main/default/objects/UHN_AAR__c/fields/Pub_Total_Count__c.field-meta.xml
<CustomField>
    <fullName>Pub_Total_Count__c</fullName>
    <description>Total publication count from the bibliometric source system (e.g., Scopus, Web of Science). Includes all publication types.</description>
    <label>Total Publication Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>