force-app/main/default/objects/UHN_AAR__c/fields/Pub_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Pub_Verification_Status__c</fullName>
    <description>Verification state for the publication metrics section. Managed by VerificationReconciliationService — do not update directly.</description>
    <label>Publication Metrics Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposed</fullName>
                <default>true</default>
                <label>Proposed</label>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>