force-app/main/default/objects/UHN_AAR__c/fields/Pub_Verified_At__c.field-meta.xml
<CustomField>
    <fullName>Pub_Verified_At__c</fullName>
    <description>Timestamp of the most recent publication metrics section verification. Audit stamp — do not update manually.</description>
    <label>Publication Metrics Verified At</label>
    <type>DateTime</type>
</CustomField>