force-app/main/default/objects/UHN_AAR__c/fields/Pub_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Pub_Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who most recently verified the publication metrics section. Audit stamp — do not update manually.</description>
    <label>Publication Metrics Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Verified Publication Metrics (AAR)</relationshipLabel>
    <relationshipName>Verified_Publication_Metrics_AAR</relationshipName>
    <type>Lookup</type>
</CustomField>