force-app/main/default/objects/UHN_AAR__c/fields/Publication_Count__c.field-meta.xml
<CustomField>
    <fullName>Publication_Count__c</fullName>
    <description
  >Counts all related AAR Publication records. System-managed — do not edit.</description>
    <label>Publication Count</label>
    <summaryForeignKey>AAR_Publication__c.AAR_Record__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>