force-app/main/default/objects/UHN_AAR__c/fields/Recognition_Count__c.field-meta.xml
<CustomField>
    <fullName>Recognition_Count__c</fullName>
    <label>Recognition Count</label>
    <summaryForeignKey>AAR_Recognition__c.UHN_AAR__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>