force-app/main/default/objects/UHN_AAR__c/fields/Reporting_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_End_Date__c</fullName>
    <label>Reporting End Date</label>
    <type>Date</type>
</CustomField>