force-app/main/default/objects/UHN_AAR__c/fields/Research_Admin__c.field-meta.xml
<CustomField>
    <fullName>Research_Admin__c</fullName>
    <label>Research Admin</label>
    <lookupFilter>
        <active>false</active>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipLabel>AAR Records (Research Admin)</relationshipLabel>
    <relationshipName>AAR_Records_Research_Admin</relationshipName>
    <type>Lookup</type>
</CustomField>