force-app/main/default/objects/UHN_AAR__c/fields/Research_Assistant_Count__c.field-meta.xml
<CustomField>
    <fullName>Research_Assistant_Count__c</fullName>
    <label>Research Assistant Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>