force-app/main/default/objects/UHN_AAR__c/fields/Research_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Research_Keywords__c</fullName>
    <label>Research Keywords</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Neuroscience</fullName>
            </value>
            <value>
                <fullName>Arthritis</fullName>
            </value>
            <value>
                <fullName>Vision Science</fullName>
            </value>
            <value>
                <fullName>Regenerative Medicine</fullName>
            </value>
            <value>
                <fullName>Clinical Research</fullName>
            </value>
            <value>
                <fullName>Biomedical Engineering</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>