force-app/main/default/objects/UHN_AAR__c/fields/Review_Year__c.field-meta.xml
<CustomField>
    <fullName>Review_Year__c</fullName>
    <label>Review Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>