force-app/main/default/objects/UHN_AAR__c/fields/Scholarly_Output_Count__c.field-meta.xml
<CustomField>
    <fullName>Scholarly_Output_Count__c</fullName>
    <description>Counts all related AAR Scholarly Output records. System-managed — do not edit.</description>
    <label>Scholarly Output Count</label>
    <summaryForeignKey>AAR_Scholarly_Output__c.AAR_Record__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>