force-app/main/default/objects/UHN_AAR__c/fields/Service_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Service_Narrative__c</fullName>
    <label>Service Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>