force-app/main/default/objects/UHN_AAR__c/fields/Source_Sync_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Source_Sync_Timestamp__c</fullName>
    <description>Timestamp of the most recent successful sync from any external source system. Updated by sync handlers on each run.</description>
    <label>Last Source Sync</label>
    <type>DateTime</type>
</CustomField>