force-app/main/default/objects/UHN_AAR__c/fields/Submission_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Submission_Deadline__c</fullName>
    <formula>IF(ISBLANK(Account__r.Deadline_Date__c), 
   TODAY(),                          /* fallback if blank */
   Account__r.Deadline_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission Deadline</label>
    <type>Date</type>
</CustomField>