force-app/main/default/objects/UHN_AAR__c/fields/Suggested_Trainees__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Trainees__c</fullName>
    <description>Auto-populated at record creation from HRIS and Research 411. Read-only — do not edit manually.</description>
    <inlineHelpText>Suggested trainees are generated automatically based on HRIS data and Research 411 hints.</inlineHelpText>
    <label>Suggested Trainees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>