force-app/main/default/objects/UHN_AAR__c/fields/Supervision_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Supervision_Narrative__c</fullName>
    <label>Supervision Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>