force-app/main/default/objects/UHN_AAR__c/fields/Top_Constraints__c.field-meta.xml
<CustomField>
    <fullName>Top_Constraints__c</fullName>
    <label>Top Constraints</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>