force-app/main/default/objects/UHN_AAR__c/fields/Total_Trainee_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Trainee_Count__c</fullName>
    <description>Sum of all trainee type counts (Graduate Students + Postdocs + Research Assistants + Other). System-managed formula — do not edit.</description>
    <formula>BLANKVALUE(Graduate_Student_Count__c, 0) +
BLANKVALUE(Postdoc_Count__c, 0) +
BLANKVALUE(Research_Assistant_Count__c, 0) +
BLANKVALUE(Other_Trainee_Count__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Trainee Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>