force-app/main/default/objects/UHN_AAR__c/validationRules/VR_Attestation_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Attestation_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Submitted&quot;),
  ISBLANK(Attested_By__c)
)</errorConditionFormula>
    <errorMessage>Attestation required before submission. Please complete attestation screen.</errorMessage>
</ValidationRule>