force-app/main/default/objects/UHN_AAR__c/validationRules/VR_Review_Year_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Review_Year_Format</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Review_Year__c)),
  OR(
    LEN(Review_Year__c) &lt;&gt; 4,
    NOT(REGEX(Review_Year__c, &quot;[0-9]{4}&quot;)),
    VALUE(Review_Year__c) &lt; 2020,
    VALUE(Review_Year__c) &gt; 2100
  )
)</errorConditionFormula>
    <errorDisplayField>Review_Year__c</errorDisplayField>
    <errorMessage>Review Year must be a 4-digit year between 2020 and 2100 (e.g., 2026)</errorMessage>
</ValidationRule>