force-app/main/default/objects/UHN_AAR__c/validationRules/VR_Submit_Requires_CMaRS.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Submit_Requires_CMaRS</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Submitted&quot;),
  NOT(CMaRS_Updated__c)
)</errorConditionFormula>
    <errorMessage
  >Your CMaRS relationship disclosure must be updated before submission.</errorMessage>
</ValidationRule>