force-app/main/default/objects/UHN_AAR__c/validationRules/VR_Submit_Requires_Form_Confirmed.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Submit_Requires_Form_Confirmed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Submitted&quot;),
  NOT(Form_Confirmed_Accurate__c)
)</errorConditionFormula>
    <errorMessage
  >Please confirm the form is accurate before submitting.</errorMessage>
</ValidationRule>