force-app/main/default/objects/UHN_AAR__c/validationRules/VR_Submit_Requires_Grants_Standing.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Submit_Requires_Grants_Standing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Submitted&quot;),
  NOT(Grants_Good_Standing__c)
)</errorConditionFormula>
    <errorMessage
  >All grant accounts must be in good standing before submission.</errorMessage>
</ValidationRule>