force-app/main/default/objects/UHN_AAR__c/validationRules/VR_Submit_Requires_MyLearning.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Submit_Requires_MyLearning</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Submitted&quot;),
  NOT(Mandatory_Training_Complete__c)
)</errorConditionFormula>
    <errorMessage
  >MyLearning training must be completed before you can submit your AAR.</errorMessage>
</ValidationRule>