force-app/main/default/objects/UHN_AAR__c/listViews/Admin_All_AARs.listView-meta.xml
<ListView>
    <fullName>Admin_All_AARs</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Review_Year__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>Submission_Deadline__c</columns>
    <columns>Is_Grants_Verified__c</columns>
    <columns>Is_Publications_Verified__c</columns>
    <columns>Source_Sync_Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>Admin: All AARs</label>
</ListView>