force-app/main/default/objects/UHN_AAR__c/listViews/All_AAR_Records.listView-meta.xml
<ListView>
    <fullName>All_AAR_Records</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All AAR Records</label>
</ListView>