force-app/main/default/objects/UHN_AAR__c/listViews/My_Current_Year_AAR.listView-meta.xml
<ListView>
    <fullName>My_Current_Year_AAR</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Attestation_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Review_Year__c</columns>
    <columns>Submission_Deadline__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Current Year AAR</label>
</ListView>