force-app/main/default/objects/UHN_AAR__c/listViews/Pending_Verification.listView-meta.xml
<ListView>
    <fullName>Pending_Verification</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Review_Year__c</columns>
    <columns>Status__c</columns>
    <columns>Is_Grants_Verified__c</columns>
    <columns>Grant_Verification_Status__c</columns>
    <columns>Is_Publications_Verified__c</columns>
    <columns>Pub_Verification_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Grants_Verified__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Is_Publications_Verified__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Pending Verification</label>
</ListView>